Updates to index.html & js files

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
             <div class="sub text-align" style="border: grey; border-width: 10px; border-style: solid;">
 
             
-                <h2 class="subtitle" name="selectedCity"><span id="date"></span></h2>
+                <h2 class="subtitle" id="selectedCity">
+                   
+                </h2>
+                <div>  <span id="date"></span></div>
+
                 <div class="label" > </div>
                 <div> <span id="tempToday"></span>&deg; </div>
                 <div> <span id="windToday"></span> </div>
